# oop-mai-v19-lab2

./: CMakeLists.txt  Three.cpp  Three.h  l2.cpp  test.cpp
